--- a/README.Rmd
+++ b/README.Rmd
@@ -11,4 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Welcome to the splitRtools package!  
 
- 
+## This package is under active development and all functionality is not yet validated!!
+## The package may change significantly over development
+
+
