--- a/README.Rmd
+++ b/README.Rmd
@@ -1,20 +1,28 @@
 ---
-title: "README"
-author: "james_opzoomer"
-date: "26/04/2022"
+title: "splitRtools: Preprocessing tools for SPLiT-seq data"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, echo=FALSE, results="hide", message=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(badger)
 ```
 
-# Welcome to the splitRtools package!  
 
+```{r, echo=FALSE, warning=FALSE ,results='asis'}
+cat(
+	badge_lifecycle("experimental"),
+  badge_devel("JamesOpz/splitRtools", "blue"),
+  badge_code_size("JamesOpz/splitRtools"),
+  badge_license("MIT")
+)
+```
+
+# Welcome to the splitRtools package!
 ## This package is under active development and all functionality is not yet validated!!
 ## The package may change significantly over development
 
-## Installation
+## :arrow_double_down: Installation
 
 The package can be installed from this github repository:
 
@@ -82,9 +90,9 @@ The splitRtool pipeline will generate a set of diagnostic plots in order to eval
 </br>
 After labeling the data is filtered using either the ```DropletUtils``` package spline-fitting functionality or a user specified cutoff of transcripts. This produces the following waterfall plot along with quantifiaction of the cell types recovered by sample: </br>
 </br>
-<img src="figs/3_umi_waterfall.png" width="400"><img src="figs/cell_abundance_barplot.png" width="200">
+<img src="figs/3_umi_waterfall.png" width="380"><img src="figs/cell_abundance_barplot.png" width="200">
 </br>   
 </br> 
 The barcoding cell data is then mapped to the respective plate locations across the 3 barcoding rounds to provide a series of heatmaps displaying cells recovered per well and median UMI per cell across all wells:
 </br>
-<img src="figs/rt_barcoding_layout.png" width="425"><img src="figs/rt_umi_layout.png" width="425">
+<img src="figs/rt_barcoding_layout.png" width="400"><img src="figs/rt_umi_layout.png" width="425">
