updated README new params

--- a/README.Rmd
+++ b/README.Rmd
@@ -92,17 +92,20 @@ The splitRtools pipeline is run through the ```run_split_pipe()``` function, whi
 library(splitRtools)
 
 # Run the splitRtool pipeline
-# You must always point to two parent folders, 
-# one containing zUMIs data folders and raw FASTQ data folders
-run_split_pipe(mode = 'merge', # Merge sublibraries or process seperately
-               n_sublibs = 2, # How many to sublibraries are present
-               data_folder = "./../test_data_sp_5_miseq/", # Location of zUMIs data directory
-               output_folder = "../test_data_sp_5_miseq_outputs/", # Output folder path
-               filtering_mode = "knee", # Filter by knee (standard) or manual value (default 1000) transcripts
-               fastq_path = "../fastq_single/", # Path to folder containing subibraru raw FASTQ
-               rt_bc = "../test_data_sp_5_miseq/barcodes_v1.csv", # RT barcode map
-               lig_bc = "../test_data_sp_5_miseq/barcodes_v1.csv", # Ligation barcode map
-               sample_map = "../test_data_sp_5_miseq/cell_metadata.xlsx" # RT plate layout file
+# Each sublibrary is contained within its own folder in the data_folder folder and must contain zUMIs output, named by sublib name.
+run_split_pipe(mode = 'single', # Merge sublibraries or process separately.
+               n_sublibs = 1, # How many to sublibraries are present
+               data_folder = "~/experiment/hpc_outputs/", # Location of zUMIs data directory
+               output_folder = "~/experiment/pipe_output", # Output folder path
+               filtering_mode = "manual", # Filter by knee (standard) or manual value (default 1000, 500 in this case) transcripts
+               filter_value = 500, # UMI filter value to determine intact cells.
+               count_reads = FALSE, # Count FASTQ files in fastq_path.
+               total_reads = 22741884, # Provide read count of single sublibrary.
+               fastq_path = NA, # Path to folder containing subibrary raw FastQ data.
+               rt_bc = "~/experiment/hpc/barcode_maps/barcodes_v2_48.csv", # RT barcode map
+               lig_bc = "~/experiment/hpc/barcode_maps/barcodes_v1.csv", # Ligation barcode map
+               sample_map = "~/experiment/barcode_maps/exp013_cell_metadata.xlsx" # RT plate layout file
+               
 )
 
 ```
